# solaris-tty

./: Cargo.toml  README.md
assets/scenarios/: binary.toml  earth-moon.toml  figure8.toml  flyby.toml  jupiter.toml  kozai.toml  pluto-charon.toml  ptolemaic.toml  pythagorean.toml  retrograde.toml  saturn.toml  solar.toml  trappist1.toml  trojans.toml  unstable.toml  vortex.toml
docs/: demo-solar.cast
docs/superpowers/plans/: 2026-07-08-render-modes.md  2026-07-09-beyond-newton.md  2026-07-09-scenario-pack.md  2026-07-09-vortex-myth.md
docs/superpowers/specs/: 2026-07-06-solaris-tty-design.md  2026-07-08-render-modes-design.md  2026-07-09-beyond-newton-design.md  2026-07-09-scenario-pack-design.md  2026-07-09-vortex-myth-design.md
src/: app.rs  command.rs  lib.rs  main.rs
src/render/: camera.rs  cell.rs  framebuffer.rs  mod.rs  scale.rs  scene.rs  starfield.rs  terminal.rs
src/scenario/: loader.rs  mod.rs  schema.rs
src/sim/: body.rs  diagnostics.rs  gravity.rs  integrator.rs  kepler.rs  mod.rs  orbit.rs  units.rs  world.rs
src/trace/: mod.rs
tests/: command_tests.rs  physics_tests.rs  render_tests.rs  scenario_tests.rs
